--- a/package.json
+++ b/package.json
@@ -21,9 +21,18 @@
     "url": "https://github.com/algesten/yakayak/issues"
   },
   "homepage": "https://github.com/algesten/yakayak",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "electron-prebuilt": "^0.25.2"
+    "auto-reload-brunch": "^1.7.8",
+    "brunch": "^1.8.2",
+    "clean-css-brunch": "^1.7.2",
+    "coffee-script": "^1.9.2",
+    "coffee-script-brunch": "^1.8.1",
+    "commonjs-require-definition": "^0.2.0",
+    "css-brunch": "^1.7.0",
+    "electron-prebuilt": "^0.25.2",
+    "javascript-brunch": "^1.7.1",
+    "less-brunch": "^1.8.1",
+    "uglify-js-brunch": "^1.7.8"
   }
 }
