--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "main": "main.js",
   "dependencies": {
-    "hangupsjs": "^0.5.0"
+    "hangupsjs": "^0.5.0",
+    "q": "^1.4.0"
   }
 }
