--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Chat client for Google Hangouts",
   "main": "app/main.js",
   "scripts": {
-    "test": "mocha",
-    "compile": "coffee -c -o app src",
-    "watch": "coffee -w -c -o app/assets src & sleep 3 & brunch w"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -29,16 +27,16 @@
     "trifl": "0.0.7"
   },
   "devDependencies": {
-    "auto-reload-brunch": "^1.7.8",
-    "bower": "^1.4.1",
-    "brunch": "^1.8.2",
-    "clean-css-brunch": "^1.7.2",
     "coffee-script": "^1.9.2",
-    "coffee-script-brunch": "^1.8.1",
-    "css-brunch": "^1.7.0",
     "electron-prebuilt": "^0.25.2",
-    "javascript-brunch": "^1.7.1",
-    "less-brunch": "^1.8.1",
-    "uglify-js-brunch": "^1.7.8"
+    "gulp": "^3.8.11",
+    "gulp-coffee": "^2.3.1",
+    "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.2.0",
+    "gulp-usemin": "^0.3.11",
+    "gulp-util": "^3.0.4",
+    "rimraf": "^2.3.3"
   }
 }
