--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-prebuilt": "^0.25.2",
     "gulp": "^3.8.11",
     "gulp-coffee": "^2.3.1",
+    "gulp-concat": "^2.5.2",
     "gulp-install": "^0.4.0",
     "gulp-less": "^3.0.3",
     "gulp-sourcemaps": "^1.5.2",
