--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "coffee-script": "^1.9.2",
     "electron-prebuilt": "^0.25.2",
     "gulp": "^3.8.11",
+    "gulp-auto-reload": "0.0.1",
+    "gulp-changed": "^1.2.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.2",
     "gulp-install": "^0.4.0",
