--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "autosize": "^3.0.6",
     "hangupsjs": "^0.7.2",
+    "moment": "^2.10.3",
     "q": "^1.4.0",
     "trifl": "0.0.8"
   },
