--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "autosize": "^3.0.6",
     "hangupsjs": "^0.7.3",
     "moment": "^2.10.3",
-    "normalize-url": "^1.2.1",
     "q": "^1.4.0",
     "trifl": "0.0.8",
     "url-regexp": "^1.0.2"
@@ -44,6 +43,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.5",
     "mocha": "^2.2.5",
-    "rimraf": "^2.3.3"
+    "rimraf": "^2.3.3",
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.7.0"
   }
 }
