use node-tmp for temporary files

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hangupsjs": "^0.8.2",
     "moment": "^2.10.3",
     "q": "^1.4.0",
+    "tmp": "0.0.26",
     "trifl": "0.0.10",
     "url-regexp": "^1.0.2"
   },
