--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hangupsjs": "^0.9.0",
     "moment": "^2.10.3",
     "node-notifier": "^4.2.1",
+    "notr": "^1.1.0",
     "q": "^1.4.0",
     "tmp": "0.0.26",
     "trifl": "0.0.10",
