--- a/src/ui/css/fontello/config.json
+++ b/src/ui/css/fontello/config.json
@@ -67,6 +67,12 @@
       "src": "entypo"
     },
     {
+      "uid": "44b9e75612c5fad5505edd70d071651f",
+      "css": "attach",
+      "code": 59411,
+      "src": "entypo"
+    },
+    {
       "uid": "c77fd2fd065b5fe16d6f2b41e190b266",
       "css": "pencil",
       "code": 59408,
