add missing dep

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-notifier": "^4.2.3",
     "notr": "^1.1.2",
     "q": "^1.4.0",
+    "request": "^2.67.0",
     "tmp": "0.0.26",
     "trifl": "0.0.10",
     "url-regexp": "^1.0.2"
