--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
     "autosize": "^3.0.8",
+    "electron-prebuilt": "^1.2.1",
     "hangupsjs": "^1.3.1",
     "moment": "^2.10.3",
     "node-notifier": "^4.2.3",
