--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Chat client for Google Hangouts",
   "main": "main.js",
   "scripts": {
-    "test": "mocha"
+    "gulp": "gulp",
+    "electron": "electron",
+    "test": "mocha",
+    "deploy": "bash ./deploy.sh"
   },
   "repository": {
     "type": "git",
