--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hangupsjs": "^1.3.1",
     "moment": "^2.10.3",
     "node-notifier": "^4.2.3",
+    "spellchecker": "^3.3.1",
     "notr": "^1.1.2",
     "q": "^1.4.0",
     "request": "^2.67.0",
