add platforms to package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "gulp": "gulp",
     "electron": "electron",
     "test": "mocha",
-    "deploy": "bash ./deploy.sh"
+    "deploy": "bash ./deploy.sh",
+    "deploy:linux-x64": "bash ./deploy.sh --linux-x64",
+    "deploy:linux-ia32": "bash ./deploy.sh --linux-ia32",
+    "deploy:win32-x64": "bash ./deploy.sh --win32-x64",
+    "deploy:win32-ia32": "bash ./deploy.sh --win32-ia32",
+    "deploy:darwin-x64": "bash ./deploy.sh --darwin-x64"
   },
   "repository": {
     "type": "git",
