--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "autosize": "^3.0.8",
     "hangupsjs": "^1.3.2",
+    "mmmagic": "^0.4.5",
     "moment": "^2.10.3",
     "node-notifier": "^4.2.3",
     "notr": "^1.1.2",
