--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
     "autosize": "^3.0.8",
+    "electron-debug": "^1.0.1",
     "hangupsjs": "^1.3.2",
-    "mmmagic": "^0.4.5",
+    "mime-types": "^2.1.12",
     "moment": "^2.10.3",
     "node-notifier": "^4.2.3",
     "notr": "^1.1.2",
