--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
     "autosize": "^3.0.8",
+    "electron-prebuilt": "^1.4.10",
     "hangupsjs": "https://github.com/averissimo/hangupsjs.git#1.3.3",
     "mime-types": "^2.1.12",
     "moment": "^2.10.3",
