--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "coffee-script": "^1.9.2",
+    "electron-packager": "^8.3.0",
     "electron-prebuilt": "^1.4.10",
     "gulp": "^3.8.11",
     "gulp-auto-reload": "0.1.0",
@@ -55,7 +56,9 @@
     "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-tap": "^0.1.3",
     "gulp-util": "^3.0.6",
+    "gulp-zip": "^3.2.0",
     "mocha": "^2.2.5",
     "rimraf": "^2.4.2",
     "sinon": "^1.15.4",
