--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "gulp": "gulp",
     "electron": "electron",
     "test": "mocha",
-    "deploy": "gulp && bash ./deploy.sh",
-    "deploy:linux-x64": "bash ./deploy.sh --linux-x64",
-    "deploy:linux-ia32": "bash ./deploy.sh --linux-ia32",
-    "deploy:win32-x64": "bash ./deploy.sh --win32-x64",
-    "deploy:win32-ia32": "bash ./deploy.sh --win32-ia32",
-    "deploy:darwin-x64": "bash ./deploy.sh --darwin-x64"
+    "deploy": "gulp deploy",
+    "deploy:linux-x64": "gulp deploy:linux-x64",
+    "deploy:linux-ia32": "gulp deploy:linux-ia32",
+    "deploy:win32-x64": "gulp deploy:win32-x64",
+    "deploy:win32-ia32": "gulp deploy:win32-ia32",
+    "deploy:darwin-x64": "gulp deploy:darwin-x64"
   },
   "repository": {
     "type": "git",
