--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "gulp-changed": "^1.2.1",
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
+    "gulp-filter": "^4.0.0",
     "gulp-install": "^0.6.0",
     "gulp-less": "^3.0.5",
     "gulp-rename": "^1.2.2",
