--- a/package.json
+++ b/package.json
@@ -53,10 +53,13 @@
     "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
+    "gulp-gzip": "^1.4.0",
     "gulp-install": "^0.6.0",
     "gulp-less": "^3.0.5",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-spawn": "^0.3.0",
     "gulp-util": "^3.0.6",
     "gulp-zip": "^3.2.0",
     "mocha": "^2.2.5",
