--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "coffee-script": "^1.9.2",
     "electron-packager": "^8.3.0",
     "electron-prebuilt": "^1.4.10",
-    "gulp": "gulpjs/gulp.git#4.0",
+    "gulp": "^3.9.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^1.2.1",
     "gulp-coffee": "^2.3.1",
