--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
     "electron-packager": "^8.3.0",
-    "electron-prebuilt": "^1.4.10",
+    "electron": "^1.4.10",
     "gulp": "^3.9.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^1.2.1",
