--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-zip": "^3.2.0",
     "mocha": "^2.2.5",
     "rimraf": "^2.4.2",
+    "run-sequence": "^1.2.2",
     "sinon": "^1.15.4",
     "sinon-chai": "^2.8.0"
   }
