imposes sequence order in gulp tasks

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "electron": "electron",
     "test": "mocha",
     "deploy": "gulp deploy",
+    "deploy:linux": "gulp deploy:linux",
+    "deploy:win32": "gulp deploy:win32",
+    "deploy:darwin": "gulp deploy:darwin",
     "deploy:linux-x64": "gulp deploy:linux-x64",
     "deploy:linux-ia32": "gulp deploy:linux-ia32",
     "deploy:win32-x64": "gulp deploy:win32-x64",
