--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "start": "gulp && electron app",
-    "dev": "gulp && electron app --debug",
+    "dev": "electron app --debug",
     "gulp": "gulp",
     "electron": "electron",
     "test": "mocha",
