--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
     "autosize": "^3.0.8",
-    "electron-context-menu": "^0.8.0",
+    "electron-dl": "^1.5.0",
     "hangupsjs": "^1.3.4",
     "mime-types": "^2.1.12",
     "moment": "^2.10.3",
