--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-
 yakyak:
   build: .
   volumes:
-    - ./dist:/data/yakyak/dist
-  command: bash -c "git pull  && npm install && xvfb-run npm run deploy"
+    - ./docker-dist:/data/yakyak/dist
+  command: bash -c "git fetch && git checkout origin/master && git checkout $TAG && npm install && xvfb-run npm run deploy && chown -R 1000:1000 dist/*"
