--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
     "autosize": "^3.0.8",
-    "bog": "^1.0.2",
+    "electron-is-dev": "^0.1.2",
     "hangupsjs": "^1.3.4",
     "mime-types": "^2.1.12",
     "moment": "^2.10.3",
@@ -52,6 +52,7 @@
     "chai": "^3.2.0",
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
+    "bog": "^1.0.2",
     "electron-packager": "^8.3.0",
     "electron": "^1.4.10",
     "gulp": "^3.9.0",
