--- a/.travis.yml
+++ b/.travis.yml
@@ -27,15 +27,21 @@ before_deploy:
 
 deploy:
   provider: releases
+  # overwrite pre-existing files
+  overwrite: true
+  # always create a pre-release
   prerelease: true
+  # necessary to deploy in github, otherwise it would clean everything
   skip_cleanup: true
-  api_key:
-    secure: "${API_KEY}"
+  # secret API_KEY stored in Travis CI
+  api_key: "${API_KEY}"
+  # files to copy to github release
   file:
     - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.tar.gz"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.tar.gz"
     - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
     - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
     - "dist/yakyak-${YAKYAK_VERSION}-osx.zip"
+  # only trigger on tags
   on:
     tags: true
