corrects (Language) in es and template

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -87,7 +87,7 @@
             "copy_link": "Copy Link",
             "copy_image": "Copy Image",
             "select_all": "Select All",
-            "language": "Language"
+            "language": "Language (Language)"
         },
         "view": {
             "title": "View",
