--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/yakyak/yakyak",
   "dependencies": {
+    "auto-launch": "^5.0.1",
     "autosize": "^3.0.8",
     "hangupsjs": "^1.3.4",
     "i18n": "^0.8.3",
