Removed Devmode confinement

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -7,8 +7,8 @@ description: |
   remotely access your Google Hangouts messages, allowing you to use 
   Hangouts in a traditional instant messaging interface.
   YakYak is in no way associated with or endorsed by Google. 
-grade: devel # must be 'stable' to release into candidate/stable channels
-confinement: devmode # use 'strict' once you have the right plugs and slots
+grade: stable 
+confinement: strict 
 
 parts:
   yakyak:
