corrects locales names for japan and korean and adds missing string

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -87,7 +87,8 @@
             "copy_link": "Copy Link",
             "copy_image": "Copy Image",
             "select_all": "Select All",
-            "language": "Language (Language)"
+            "language": "Language (Language)",
+            "dateformat": "Use system date format"
         },
         "view": {
             "title": "View",
