adds missing suggest emoji as typing to i18n

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -93,6 +93,7 @@
         "view": {
             "title": "View",
             "emoji": "Convert text to emoji",
+            "suggestemoji": "Suggest emoji on typing",
             "hide_dock": "Hide Dock icon",
             "fullscreen": "Toggle Fullscreen",
             "tray": {
