add electron-osx-sign to list of dependencies (refs #245)
This will attempt to sign the on OS X, if an identity is available. It
doesn't find my standard identity, but maybe it'll work as-is on
travis...

--- a/package.json
+++ b/package.json
@@ -57,8 +57,9 @@
     "chai": "^3.2.0",
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
-    "electron-packager": "^8.3.0",
     "electron": "^1.4.10",
+    "electron-osx-sign": "^0.4.7",
+    "electron-packager": "^8.3.0",
     "gulp": "^3.9.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^1.2.1",
