--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "request": "^2.67.0",
     "tmp": "0.0.28",
     "trifl": "0.0.10",
-    "url-regex": "^4.0.0"
+    "url-regex": "averissimo/url-regex#v5.0.0"
   },
   "devDependencies": {
     "chai": "^3.2.0",
