--- a/.travis.yml
+++ b/.travis.yml
@@ -12,36 +12,58 @@ notifications:
 dist: trusty
 sudo: required
 
+os:
+  - linux
+  - osx
+
 before_deploy:
   # YAKYAK_VERSION is used in the files to copy
   - export YAKYAK_VERSION=`node -e "console.log(require('./package.json').version);"`
   # debug information for the electron packager
   - export DEBUG=electron-packager
   # allows to have wine with 32-bits
-  - sudo dpkg --add-architecture i386
-  - sudo apt-get -qq update
-  - sudo apt-get install -y wine1.6-i386 zip xvfb
-  - WINEARCH=win32 wine wineboot --init
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo dpkg --add-architecture i386 ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get -qq update ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install -y wine1.6-i386 zip xvfb ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; WINEARCH=win32 wine wineboot --init ; fi
   # actuall building of the binaries
-  - xvfb-run npm run deploy
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; xvfb-run npm run deploy ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; npm run deploy:darwin ; fi
 
 deploy:
-  provider: releases
-  # overwrite pre-existing files
-  overwrite: true
-  # always create a pre-release
-  prerelease: true
-  # necessary to deploy in github, otherwise it would clean everything
-  skip_cleanup: true
-  # secret API_KEY stored in Travis CI
-  api_key: "${API_KEY}"
-  # files to copy to github release
-  file:
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.tar.gz"
-    - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
-    - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
-    - "dist/yakyak-${YAKYAK_VERSION}-osx.zip"
-  # only trigger on tags
-  on:
-    tags: true
+  - provider: releases
+    # overwrite pre-existing files
+    overwrite: true
+    # always create a pre-release
+    prerelease: true
+    # necessary to deploy in github, otherwise it would clean everything
+    skip_cleanup: true
+    # secret API_KEY stored in Travis CI
+    api_key: "${API_KEY}"
+    # files to copy to github release
+    file:
+      - "dist/yakyak-${YAKYAK_VERSION}-linux-x64.tar.gz"
+      - "dist/yakyak-${YAKYAK_VERSION}-linux-ia32.tar.gz"
+      - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
+      - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
+    # only trigger on tags
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = 'linux'
+      
+  - provider: releases
+    # overwrite pre-existing files
+    overwrite: true
+    # always create a pre-release
+    prerelease: true
+    # necessary to deploy in github, otherwise it would clean everything
+    skip_cleanup: true
+    # secret API_KEY stored in Travis CI
+    api_key: "${API_KEY}"
+    # files to copy to github release
+    file:
+      - "dist/yakyak-${YAKYAK_VERSION}-osx.zip"
+    # only trigger on tags
+    on:
+      tags: true
+      condition: $TRAVIS_OS_NAME = 'osx'
