supports new image/video notifications

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -39,7 +39,8 @@
         "leave": "Leave conversation",
         "leave_confirm": "Really leave conversation?",
         "search": "Search people",
-        "new_message": "New Message"
+        "new_message": "New message received",
+        "new_attachment": "New message received (image or video)"
     },
     "notification": {
         "one": "Notification",
