--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:darwin": "gulp deploy:darwin",
     "deploy:linux-x64": "gulp deploy:linux-x64",
     "deploy:linux-x64:deb": "gulp deploy:linux-x64:deb",
+    "deploy:linux-x64:flatpak": "gulp deploy:linux-x64:flatpak",
     "deploy:linux-x64:rpm": "gulp deploy:linux-x64:rpm",
     "deploy:linux-ia32": "gulp deploy:linux-ia32",
     "deploy:linux-ia32:deb": "gulp deploy:linux-ia32:deb",
@@ -64,6 +65,7 @@
     "devtron": "^1.4.0",
     "electron-packager": "^10.1.0",
     "electron": "^1.7.10",
+    "electron-installer-flatpak": "^0.6.0",
     "gulp": "^3.9.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^3.1.0",
