--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 #  it would be necessary to add wine ppa
 #
 # https://docs.travis-ci.com/user/trusty-ci-environment/#Using-Trusty
-dist: trusty
+dist: xenial
 sudo: required
 
 before_deploy:
