--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,16 @@ before_deploy:
   - flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
   - flatpak --user install flathub org.freedesktop.Platform/i386/1.6
   # actuall building of the binaries
-  - xvfb-run npm run deploy
+  - npm run deploy:linux-x64:nodep
+  - npm run deploy:linux-x64:deb
+  - npm run deploy:linux-x64:rpm
+  - npm run deploy:linux-x64:flatpak
+  - npm run deploy:linux-ia32:nodep
+  - npm run deploy:linux-ia32:deb
+  - npm run deploy:linux-ia32:rpm
+  - npm run deploy:linux-ia32:flatpak
+  - npm run deploy:darwin
+  - xvfb-run npm run deploy:win32
 
 deploy:
   provider: releases
