--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "deploy:linux-x64:rpm": "gulp deploy:linux-x64:rpm",
     "deploy:linux-ia32": "gulp deploy:linux-ia32",
     "deploy:linux-ia32:deb": "gulp deploy:linux-ia32:deb",
+    "deploy:linux-ia32:flatpak": "gulp deploy:linux-ia32:flatpak",
     "deploy:linux-ia32:rpm": "gulp deploy:linux-ia32:rpm",
     "deploy:win32-x64": "gulp deploy:win32-x64",
     "deploy:win32-ia32": "gulp deploy:win32-ia32",
