removes debian from travis, this can be added later

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,12 +37,12 @@ before_deploy:
   - flatpak --user install flathub org.freedesktop.Platform/i386/1.6
   # actuall building of the binaries
   - npm run -loglevel notice deploy:linux-x64
-  - npm run -loglevel notice deploy:linux-x64:deb
-  #- npm run -loglevel silly deploy:linux-x64:rpm
+  # - npm run -loglevel notice deploy:linux-x64:deb
+  # - npm run -loglevel silly deploy:linux-x64:rpm
   - npm run -loglevel silly deploy:linux-x64:flatpak
   - npm run -loglevel notice deploy:linux-ia32
-  - npm run -loglevel silly deploy:linux-ia32:deb
-  #- npm run -loglevel silly deploy:linux-ia32:rpm
+  # - npm run -loglevel silly deploy:linux-ia32:deb
+  # - npm run -loglevel silly deploy:linux-ia32:rpm
   - npm run -loglevel silly deploy:linux-ia32:flatpak
   - npm run -loglevel notice deploy:darwin
   - xvfb-run npm run -loglevel notice deploy:win32
