gulp4 support to eventually stop using spawn in compression

--- a/package.json
+++ b/package.json
@@ -64,24 +64,25 @@
     "chai": "^4.1.0",
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
+    "electron": "^1.7.10",
     "electron-installer-flatpak": "^0.6.0",
     "electron-packager": "^10.1.0",
-    "electron": "^1.7.10",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^3.1.0",
     "gulp-coffee": "^3.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^5.0.0",
-    "gulp-gzip": "^1.4.0",
+    "gulp-gzip": "^1.4.1",
     "gulp-install": "^1.1.0",
     "gulp-less": "^3.0.5",
     "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-spawn": "^0.4.0",
+    "gulp-tar": "^2.1.0",
     "gulp-util": "^3.0.6",
-    "gulp-zip": "^4.0.0",
+    "gulp-zip": "^4.1.0",
     "mocha": "^4.1.0",
     "rimraf": "^2.4.2",
     "run-sequence": "^2.0.0",
