reduce verbosity of apt

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,23 @@ before_deploy:
   # allows to have wine with 32-bits
   - sudo dpkg --add-architecture i386
   - sudo apt-get -qq update
-  - sudo apt-get install -y wine1.6-i386 zip xvfb
+  - sudo apt-get install -y -qq wine1.6-i386 zip xvfb
   - WINEARCH=win32 wine wineboot --init
   # install fpm
   - gem install --no-ri --no-rdoc fpm
+  # actuall building of the binaries
+  - npm run -loglevel silly deploy:linux-x64:rpm
+  - npm run -loglevel notice deploy:linux-x64:deb
+  - npm run -loglevel silly deploy:linux-ia32:rpm
+  - npm run -loglevel notice deploy:linux-ia32:deb
+  #
+  - npm run -loglevel notice deploy:linux-x64
+  - npm run -loglevel notice deploy:linux-ia32
+  - npm run -loglevel notice deploy:darwin
+  - xvfb-run npm run -loglevel notice deploy:win32
   # install flatpak dependencies
   - sudo add-apt-repository ppa:alexlarsson/flatpak -y
-  - sudo apt update
+  - sudo apt update -qq
   - sudo apt install flatpak-builder flatpak
   - flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
   # 64-bits
@@ -35,17 +45,9 @@ before_deploy:
   # 32-bits
   - flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
   - flatpak --user install flathub org.freedesktop.Platform/i386/1.6
-  # actuall building of the binaries
-  - npm run -loglevel notice deploy:linux-x64
-  - npm run -loglevel notice deploy:linux-x64:deb
-  - npm run -loglevel silly deploy:linux-x64:rpm
-  - npm run -loglevel silly deploy:linux-x64:flatpak
-  - npm run -loglevel notice deploy:linux-ia32
-  - npm run -loglevel silly deploy:linux-ia32:deb
-  - npm run -loglevel silly deploy:linux-ia32:rpm
-  - npm run -loglevel silly deploy:linux-ia32:flatpak
-  - npm run -loglevel notice deploy:darwin
-  - xvfb-run npm run -loglevel notice deploy:win32
+  #
+  - npm run -loglevel notice deploy:linux-x64:flatpak
+  - npm run -loglevel notice deploy:linux-ia32:flatpak
 
 deploy:
   provider: releases
