silence npm runs and adds dependencies to rpm, deb, flatpak

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,22 +22,27 @@ before_deploy:
   - sudo apt-get -qq update
   - sudo apt-get install -y -qq wine1.6-i386 zip xvfb
   - WINEARCH=win32 wine wineboot --init
+  #
+  # actuall building of the binaries
+  - npm run -loglevel silent deploy:linux-x64
+  - npm run -loglevel silent deploy:linux-ia32
+  - npm run -loglevel silent deploy:darwin
+  - xvfb-run npm run -loglevel silent deploy:win32
+  #
+  # RPM and DEB binaries
   # install fpm
   - gem install --no-ri --no-rdoc fpm
-  # actuall building of the binaries
-  - npm run -loglevel silly deploy:linux-x64:rpm
-  - npm run -loglevel notice deploy:linux-x64:deb
-  - npm run -loglevel silly deploy:linux-ia32:rpm
-  - npm run -loglevel notice deploy:linux-ia32:deb
   #
-  - npm run -loglevel notice deploy:linux-x64
-  - npm run -loglevel notice deploy:linux-ia32
-  - npm run -loglevel notice deploy:darwin
-  - xvfb-run npm run -loglevel notice deploy:win32
+  - npm run -loglevel silly deploy:linux-x64:rpm:nodep
+  - npm run -loglevel silent deploy:linux-x64:deb:nodep
+  - npm run -loglevel silly deploy:linux-ia32:rpm:nodep
+  - npm run -loglevel silent deploy:linux-ia32:deb:nodep
+  #
+  # Flatpak
   # install flatpak dependencies
   - sudo add-apt-repository ppa:alexlarsson/flatpak -y
   - sudo apt update -qq
-  - sudo apt install flatpak-builder flatpak
+  - sudo apt install flatpak-builder flatpak -qq
   - flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
   # 64-bits
   - flatpak --user install flathub org.freedesktop.Sdk/x86_64/1.6
@@ -46,8 +51,8 @@ before_deploy:
   - flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
   - flatpak --user install flathub org.freedesktop.Platform/i386/1.6
   #
-  - npm run -loglevel notice deploy:linux-x64:flatpak
-  - npm run -loglevel notice deploy:linux-ia32:flatpak
+  - npm run -loglevel silent deploy:linux-x64:flatpak:nodep
+  - npm run -loglevel silent deploy:linux-ia32:flatpak:nodep
 
 deploy:
   provider: releases
