--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -38,10 +38,15 @@
         "delete_confirm": "Really delete conversation?",
         "leave": "Leave conversation",
         "leave_confirm": "Really leave conversation?",
+        "history_on": "History has been turned on.",
+        "history_off": "History has been turned off.",
         "search": "Search people",
         "new_message": "New message received",
         "new_attachment": "New message received (image or video)",
-        "open_link": "Opening the link in the browser..."
+        "open_link": "Opening the link in the browser...",
+        "toggle_history":"Toggle conversation history",
+        "toggle_history_on":"History is on",
+        "toggle_history_off":"History is off"
     },
     "notification": {
         "one": "Notification",
