fixed attach image bug, fixed line break bugs, fixed copy paste bug, fixed test bugs

--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "chai": "^4.1.0",
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
-    "electron-packager": "^10.1.0",
     "electron": "^1.7.10",
+    "electron-packager": "^10.1.0",
     "gulp": "^3.9.0",
     "gulp-auto-reload": "0.1.0",
     "gulp-changed": "^3.1.0",
@@ -84,7 +84,10 @@
     "gulp-spawn": "^0.4.0",
     "gulp-util": "^3.0.6",
     "gulp-zip": "^4.0.0",
+    "jsdom": "11.6.2",
+    "jsdom-global": "3.0.2",
     "mocha": "^5.0.0",
+    "mocha-jsdom": "^1.1.0",
     "rimraf": "^2.4.2",
     "run-sequence": "^2.0.0",
     "sinon": "^4.1.4",
