--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "auto-launch": "^5.0.1",
     "autosize": "^4.0.0",
-    "hangupsjs": "^1.3.6",
+    "hangupsjs": "git+ssh://git@github.com/yakyak/hangupsjs.git",
     "i18n": "^0.8.3",
     "mime-types": "^2.1.12",
     "moment": "^2.10.3",
