--- a/package.json
+++ b/package.json
@@ -68,17 +68,17 @@
     "coffee-script": "^1.9.2",
     "devtron": "^1.4.0",
     "electron": "^3.0.2",
-    "electron-packager": "^10.1.0",
-    "gulp": "^3.9.0",
-    "gulp-auto-reload": "0.1.0",
+    "electron-packager": "^12.1.2",
+    "gulp": "^4.0.0",
+    "gulp-livereload": "4.0.0",
     "gulp-changed": "^3.1.0",
     "gulp-coffee": "^3.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^5.0.0",
     "gulp-gzip": "^1.4.0",
     "gulp-install": "^1.1.0",
-    "gulp-less": "^3.0.5",
-    "gulp-print": "^2.0.1",
+    "gulp-less": "^4.0.1",
+    "gulp-print": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-spawn": "^0.4.0",
@@ -87,7 +87,7 @@
     "mocha": "^5.0.0",
     "rimraf": "^2.4.2",
     "run-sequence": "^2.0.0",
-    "sinon": "^4.1.4",
-    "sinon-chai": "^2.8.0"
+    "sinon": "^6.0.1",
+    "sinon-chai": "^3.2.0"
   }
 }
