--- a/.travis.yml
+++ b/.travis.yml
@@ -41,19 +41,22 @@ before_deploy:
   #
   # Flatpak
   # install flatpak dependencies
-  - sudo add-apt-repository ppa:alexlarsson/flatpak -y
-  - sudo apt-get update -qq
-  - sudo apt-get install flatpak-builder flatpak -qq
-  - flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-  # 64-bits
-  - flatpak --user install flathub org.freedesktop.Sdk/x86_64/1.6
-  - flatpak --user install flathub org.freedesktop.Platform/x86_64/1.6
-  # 32-bits
-  - flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
-  - flatpak --user install flathub org.freedesktop.Platform/i386/1.6
   #
-  - npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-x64:flatpak:nodep
-  - npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-ia32:flatpak:nodep
+  # Commented out as it is not working
+  #
+  #- sudo add-apt-repository ppa:alexlarsson/flatpak -y
+  #- sudo apt-get update -qq
+  #- sudo apt-get install flatpak-builder flatpak -qq
+  #- flatpak --user remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
+  ## 64-bits
+  #- flatpak --user install flathub org.freedesktop.Sdk/x86_64/1.6
+  #- flatpak --user install flathub org.freedesktop.Platform/x86_64/1.6
+  ## 32-bits
+  #- flatpak --user install flathub org.freedesktop.Sdk/i386/1.6
+  #- flatpak --user install flathub org.freedesktop.Platform/i386/1.6
+  #
+  #- npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-x64:flatpak:nodep
+  #- npm run -loglevel ${NPM_DEBUG_LEVEL} gulp deploy:linux-ia32:flatpak:nodep
 
 deploy:
   provider: releases
@@ -72,8 +75,8 @@ deploy:
     - "dist/yakyak-${YAKYAK_VERSION}-win32-ia32.zip"
     - "dist/yakyak-${YAKYAK_VERSION}-win32-x64.zip"
     - "dist/yakyak-${YAKYAK_VERSION}-osx.zip"
-    - "dist/com.github.yakyak.YakYak_master_x64.flatpak"
-    - "dist/com.github.yakyak.YakYak_master_ia32.flatpak"
+      #- "dist/com.github.yakyak.YakYak_master_x64.flatpak"
+      #- "dist/com.github.yakyak.YakYak_master_ia32.flatpak"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-amd64.deb"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-i386.deb"
     - "dist/yakyak-${YAKYAK_VERSION}-linux-i386.rpm"
