Adding Pop to translation template.

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -141,7 +141,8 @@
                 "default": "Original",
                 "blue": "Blue",
                 "dark": "Dark",
-                "material": "Material"
+                "material": "Material",
+		"pop": "Pop"
             },
             "font": {
                 "title": "Font Size",
