adds to template

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -142,7 +142,8 @@
                 "blue": "Blue",
                 "dark": "Dark",
                 "material": "Material",
-                "pop": "Pop"
+                "pop": "Pop",
+                "gruvy": "Gruvy"
             },
             "font": {
                 "title": "Font Size",
