--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "auto-launch": "^5.0.5",
     "autosize": "^4.0.2",
-    "hangupsjs": "https://github.com/yakyak/hangupsjs/tarball/v1.3.8",
+    "hangupsjs": "^1.3.8",
     "i18n": "^0.8.3",
     "mime-types": "^2.1.21",
     "moment": "^2.22.2",
