Add the newmessage menu entry

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -114,6 +114,7 @@
             },
             "conversation": {
                 "title": "Conversation List",
+                "new": "New conversation",
                 "timestamp": "Show Conversation Timestamp",
                 "last": "Show Conversation Last Message",
                 "previous": "Previous Conversation",
