Add 'Show image preview' feature #620
Available in Menu->View->Show image preview .
It is possible to toggle the image preview with
CTRL+P keyboard combination.

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -96,6 +96,7 @@
             "title": "View",
             "emoji": "Convert text to emoji",
             "suggestemoji": "Suggest emoji on typing",
+            "showimagepreview": "Show image preview",
             "hide_dock": "Hide Dock icon",
             "fullscreen": "Toggle Fullscreen",
             "tray": {
