--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "notr": "^1.1.2",
     "q": "^1.5.1",
     "request": "^2.88.0",
-    "tmp": "0.0.31",
+    "tmp": "^0.1.0",
     "trifl": "0.0.10",
     "uber-url-regex": "^5.0.8"
   },
@@ -85,9 +85,9 @@
     "gulp-spawn": "^0.4.5",
     "gulp-util": "^3.0.6",
     "gulp-zip": "^4.2.0",
-    "mocha": "^5.2.0",
+    "mocha": "^6.0.0",
     "rimraf": "^3.0.0",
-    "sinon": "^6.0.1",
+    "sinon": "^8.1.0",
     "sinon-chai": "^3.4.0"
   }
 }
