--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 #  it would be necessary to add wine ppa
 #
 # https://docs.travis-ci.com/user/trusty-ci-environment/#Using-Trusty
-dist: xenial
+dist: bionic
 sudo: required
 
 before_install:
@@ -24,8 +24,8 @@ before_deploy:
   - sudo dpkg --add-architecture i386
   - sudo apt-get -qq update
   - sudo rm /var/lib/dpkg/lock
-  - sudo apt-get install -y -qq wine1.6-i386 zip xvfb rpm
-  - WINEARCH=win32 wine wineboot --init
+  - sudo apt-get install -y -qq wine zip xvfb rpm
+  # - WINEARCH=win32 wine wineboot --init
   #
   # actuall building of the binaries
   - npm run -loglevel ${NPM_DEBUG_LEVEL} deploy:linux-x64
