Add show-hide preview for attachment images too
This is a feature #620 follow-up.
A new i18n string is added: 'no_preview_image_click_to_open'.

--- a/src/locales/en.json.template
+++ b/src/locales/en.json.template
@@ -42,7 +42,8 @@
         "search": "Search people",
         "new_message": "New message received",
         "new_attachment": "New message received (image or video)",
-        "open_link": "Opening the link in the browser..."
+        "open_link": "Opening the link in the browser...",
+        "no_preview_image_click_to_open": "Image preview is disabled: click to open it in the browser"
     },
     "notification": {
         "one": "Notification",
