Work around window state not being restored properly on multi-monitor setup.

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "request": "^2.88.0",
     "tmp": "^0.1.0",
     "trifl": "0.0.10",
-    "uber-url-regex": "^5.0.9"
+    "uber-url-regex": "^5.0.9",
+    "node-persist": "^2.1.0"
   },
   "optionalDependencies": {
     "electron-installer-flatpak": "^0.6.0"
