--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
   "dependencies": {
     "auto-launch": "^5.0.5",
     "autosize": "^4.0.2",
-    "hangupsjs": "^1.3.8",
+    "bog": "^1.0.0",
+    "hangupsjs": "yakyak/hangupsjs",
     "i18n": "^0.8.4",
     "mime-types": "^2.1.26",
     "moment": "^2.24.0",
