--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "node-notifier": "^9.0.0",
     "notr": "^1.1.2",
     "q": "^1.5.1",
+    "react": "^16.12.0",
+    "request": "^2.88.2",
     "snyk": "^1.425.4",
     "tmp": "^0.2.1",
     "trifl": "0.0.10",
