initial framework to introduce react

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "notr": "^1.1.2",
     "q": "^1.5.1",
     "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "request": "^2.88.2",
     "snyk": "^1.425.4",
     "tmp": "^0.2.1",
