--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
     "q": "^1.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "request": "^2.88.2",
     "snyk": "^1.425.4",
     "tmp": "^0.2.1",
